[gd_scene load_steps=6 format=2]

[ext_resource path="res://Escenas/Interfaces/Transiciones/TransicionBattle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main Resources/AutoloadsScripts/autoload_principal.gd" type="Script" id=2]
[ext_resource path="res://Escenas/Interfaces/Menu/timerquit.tscn" type="PackedScene" id=3]
[ext_resource path="res://Escenas/Interfaces/Transiciones/AudioMusicPrincipal.tscn" type="PackedScene" id=4]
[ext_resource path="res://Escenas/Interfaces/Menu/SING_SAVING.tscn" type="PackedScene" id=5]

[node name="performancesext" type="Node"]
script = ExtResource( 2 )

[node name="TransicionBattle" parent="." instance=ExtResource( 1 )]

[node name="timerquit" parent="." instance=ExtResource( 3 )]

[node name="AudioMusicPrincipal" parent="." instance=ExtResource( 4 )]

[node name="SING_SAVING" parent="." instance=ExtResource( 5 )]
